--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,51 +6,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flask Auth Example</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+{#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>#}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
-    <section class="hero is-primary is-fullheight">
+<section class="hero is-primary is-fullheight">
 
-        <div class="hero-head">
-            <nav class="navbar">
-                <div class="container">
-                    <div id="navbarMenuHeroA" class="navbar-menu">
-                        <div class="navbar-end">
-                            <a href="{{ url_for('main.index') }}" class="navbar-item">
-                                Home
-                            </a>
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                                Profile
-                            </a>
-                            {% endif %}
-                            {% if not current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.login') }}" class="navbar-item">
-                                Login
-                            </a>
-                            <a href="{{ url_for('auth.signup') }}" class="navbar-item">
-                                Sign Up
-                            </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                                Logout
-                            </a>
-                            {% endif %}
+    <div class="hero-head">
+        <div class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+
+                        <div class="navbar-header">
+                            <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse"><span
+                                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                            </button>
+                            <a href="{{ url_for('main.index') }}" class="navbar-brand">TakeIt</a>
+                        </div>
+
+                        <div class="navbar-collapse collapse" id="mobile_menu">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="{{ url_for('main.index') }}">Home</a></li>
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Donations <span
+                                        class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Donate Money</a></li>
+                                        <li><a href="#">Donate Items</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Custom Search</a></li>
+                            </ul>
+                            <ul class="nav navbar-nav">
+                                <li>
+                                    <form action="" class="navbar-form">
+                                        <div class="form-group">
+                                            <div class="input-group">
+                                                <input type="search" name="search" id=""
+                                                       placeholder="Search Anything Here..." class="form-control">
+                                                <span class="input-group-addon"><span
+                                                        class="glyphicon glyphicon-search"></span></span>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </li>
+                            </ul>
+
+                            <ul class="nav navbar-nav navbar-right">
+                                {% if current_user.is_authenticated %}
+                                <li><a href="{{ url_for('main.profile') }}"><span
+                                        class="glyphicon glyphicon-user"></span> Profile</a></li>
+                                {% endif %}
+                                {% if not current_user.is_authenticated %}
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
+                                        class="glyphicon glyphicon-log-in"></span> Login / Sign Up <span
+                                        class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                                        <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
+                                    </ul>
+                                </li>
+                                {% endif %}
+                                {% if current_user.is_authenticated %}
+                                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+                                    Logout
+                                </a>
+                                {% endif %}
+                            </ul>
                         </div>
                     </div>
                 </div>
-            </nav>
-        </div>
-
-        <div class="hero-body">
-            <div class="container has-text-centered">
-               {% block content %}
-               {% endblock %}
             </div>
         </div>
-    </section>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </div>
+
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
