--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% if current_user.is_authenticated %}
         <h1 class="title">
-            Welcome {{ city }} To TakeIt !
+            Welcome {{ name }} To TakeIt !
         </h1>
     {% endif %}
     {% if not current_user.is_authenticated %}
