--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -31,7 +31,13 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="city" name="city" placeholder="City">
+                    <input class="input is-large" type="text" name="city" placeholder="City">
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <input class="input" type="checkbox" name="is_gmah" value="true">
+                    <label for="is_gmah">I'm a GMAH</label>
                 </div>
             </div>
 
