--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -8,6 +8,7 @@
     <title>Flask Auth Example</title>
 {#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>#}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel= "stylesheet" type= "text/css" href="/static/style.css">
 </head>
 
 <body>
