--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -7,14 +7,14 @@
         </h1>
     {% endif %}
     {% if not current_user.is_authenticated %}
-        <h1 class="title">
+        <h1 class="subtitle">
             Welcome To TakeIt !
         </h1>
     {% endif %}
     <h2 class="subtitle">
         The first "give-away" platform ! here you can borrow items from the closest place to your home
     </h2>
-    <iframe class="head"
+    <iframe class="mapcentered"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3385.87622010806!2d34.82510661523966!3d31.937117781233866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b5d7c494c445%3A0x659f08e24eda14fd!2sBe&#39;er%20Ya&#39;akov!5e0!3m2!1sen!2sil!4v1657985427988!5m2!1sen!2sil"
             width="690" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
