--- a/project/static/style.css
+++ b/project/static/style.css
@@ -1,90 +1,122 @@
-nav {
-  margin: 27px auto 0;
+/* Login Test */
+  .pushable {
+    background: #2AA29C;
+    border-radius: 12px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    width:40%;
+    margin-left:30%;
+  }
+  .front {
+    display: block;
+    padding: 12px 42px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    background: #2EB2AC;
+    color: white;
+    transform: translateY(-6px);
+  }
 
-  position: relative;
-  width: 590px;
-  height: 50px;
-  background-color: #34495e;
-  border-radius: 8px;
-  font-size: 0;
+  .pushable:active .front {
+    transform: translateY(-2px);
+  }
+
+body{
+    margin-top:5%;
 }
-nav a {
-  line-height: 50px;
+.centertext{
+text-align:center;
+}
+
+/*navbar */
+.sticky{
+  position: fixed;
+  width:100%;
+  top:0;
+  z-index: 999;
+  color:53599A;
+
+}
+/* index */
+.mapcentered{
+    margin:5% 0 0 30%;
+
+}
+.subtitle{
+    text-align:center;
+}
+
+/* forms*/
+.centerform{
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 60px rgba(0,0,0,0.45);
+  border-radius: 50px;
+  width:60%;
+  margin:auto;
+  margin-top:90px;
+  background-color:#8DE2DE;
+  padding-bottom:10px;
+}
+.hova{
+    color:red;
+    display:inline;
+}
+/*sign up*/
+
+
+.split {
   height: 100%;
-  font-size: 15px;
-  display: inline-block;
-  position: relative;
+  width: 50%;
+  position: fixed;
   z-index: 1;
-  text-decoration: none;
-  text-transform: uppercase;
-  text-align: center;
-  color: white;
-  cursor: pointer;
+  top: 4%;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
-nav .animation {
-  position: absolute;
-  height: 100%;
-  top: 0;
-  z-index: 0;
-  transition: all .5s ease 0s;
-  border-radius: 8px;
-}
-a:nth-child(1) {
-  width: 100px;
-}
-a:nth-child(2) {
-  width: 110px;
-}
-a:nth-child(3) {
-  width: 100px;
-}
-a:nth-child(4) {
-  width: 160px;
-}
-a:nth-child(5) {
-  width: 120px;
-}
-nav .start-home, a:nth-child(1):hover~.animation {
-  width: 100px;
+
+.left {
   left: 0;
-  background-color: #1abc9c;
-}
-nav .start-about, a:nth-child(2):hover~.animation {
-  width: 110px;
-  left: 100px;
-  background-color: #e74c3c;
-}
-nav .start-blog, a:nth-child(3):hover~.animation {
-  width: 100px;
-  left: 210px;
-  background-color: #3498db;
-}
-nav .start-portefolio, a:nth-child(4):hover~.animation {
-  width: 160px;
-  left: 310px;
-  background-color: #9b59b6;
-}
-nav .start-contact, a:nth-child(5):hover~.animation {
-  width: 120px;
-  left: 470px;
-  background-color: #e67e22;
+  background-color: #6D9DC5;
 }
 
+.right {
+  right: 0;
+  background-color: #AEECEF;
+}
 
+.centered12 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
 
+.description{
+    font-family: 'Aclonica';
+    font-size:70px;
+}
 /*signup page */
 .choosesign{
 display:inline;
-    width:30%;
+    width:40%;
     background-color:red;
+    margin:auto;}
 
+body {
+font-family: Arial, Helvetica, sans-serif;
 }
 
-
-body {font-family: Arial, Helvetica, sans-serif;}
-
-
+.textcenter{
+    text-align:center;
+    font-family:Corsiva;
+}
 /* file upload center */
 
 input[type=file] {
@@ -92,8 +124,16 @@ color:black;
 width: auto;
 }
 
-input{
+label{
     width: 40%;
+    padding: 15px;
+    text-align:center;
+    display: block;
+    margin:auto;
+}
+
+input{
+    width: 30%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: block;
@@ -104,16 +144,19 @@ input{
     box-shadow: 0 2px 3px black;
     border-bottom: 0.25em solid #0f5177;
     top:-2px;
-    border-radius: 15px;}
+    border-radius: 15px;
+    }
 
 input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
-
+b{
+}
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
+  text-align: center;
 }
 
 
@@ -123,22 +166,23 @@ button {
   background-color: #04AA6D;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 40px 70px;
   border: none;
   cursor: pointer;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.8;
+  border-radius:20px;
 }
 
 button:hover {
   opacity:1;
 }
 
-
 /* Extra styles for the cancel button */
 
 .cancelbtn {
   padding: 14px 20px;
+
   background-color: #f44336;
 }
 
@@ -146,11 +190,12 @@ button:hover {
 /* Float cancel and signup buttons and add an equal width */
 
 .cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
+    margin-left:11%;
+    width: 30%;
 }
 input::placeholder {
-    text-align: right;
+    text-align: center;
+    opacity:0.4;
 }
 
 /* Add padding to container elements*/
@@ -214,7 +259,6 @@ input::placeholder {
             }
 
             ::placeholder {
-                color: #FFFFFF;
                 opacity: 1;
                 font-style: oblique;
                 font-weight: bold;
