--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -14,8 +14,8 @@
         <div class="container">
   <form class="centerform" method="POST" action="/login">
     <p class="centertext description" style="font-size:100px">Welcome</p>
-    <input type="email" placeholder="Email"><br>
-    <input type="password" placeholder="Password"><br>
+    <input type="email" placeholder="Email" name="email"><br>
+    <input type="password" placeholder="Password" name="password"><br>
       <button class="pushable">
   <span class="front">
     Sign in
