--- a/project/templates/forget_password.html
+++ b/project/templates/forget_password.html
@@ -1,29 +1,41 @@
+
 {% extends "base.html" %}
 
 {% block content %}
-    <form class="centerform">
-    <p class="centertext description" style="font-size:50px">Forgot my password</p>
-                <label name="id" for="id"><br>תעודת זהות </b></label>
-    <input type="text" placeholder="1234556789" name="id" required
-                      oninvalid="this.setCustomValidity('Enter Your ID Here')"
-    oninput="this.setCustomValidity('')" >
+<div class="column is-4 is-offset-4">
 
-        <label for="email"><b>כתובת אימייל </b></label>
-    <input type="email" placeholder="name@domain.co" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$">
-<!--    required-->
-<!--                      oninvalid="this.setCustomValidity('Enter User Email Here')"-->
-<!--    oninput="this.setCustomValidity('')" >-->
-<!--    &lt;!&ndash;    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"&ndash;&gt;-->
-
-      <button class="pushable" style="margin-top:40px;">
-  <span class="front">
-    Reset Password
-  </span>
-</button>
+        <div class="container">
+  <form class="centerform" method="POST" action="/resetpassword">
+    <p style="font-size:200%;" class="textcenter">Forgot Your Password </p>
+      <div class="box">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="notification is-danger" style="margi:0 0 0 20%;">
+                {{ messages[0] }}.
+            </div>
+        {% endif %}
+        {% endwith %}
+        <label name="id" for="id"><p class="hova"> *</p> Id</label>
+        <input type="id" placeholder="id" name="id"><br>
+        <label name="email" for="email"><br> <p class="hova"> *</p> Email</label>
+        <input type="email" placeholder="Email" name="email">
+              <button class="pushable" >
+                  <span class="front raise shadowed" >
+                      Send Mail
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="artdeco-icon lazy-loaded" focusable="false" >
+                        <path d="M14 12L8 3.06 9.55 2l6.19 9.15a1.5 1.5 0 010 1.69L9.55 22 8 20.94z" fill="rgba(0, 0, 0, 0.6)"></path></svg>
+                  </span>
+              </button>
   </form>
-        </div>
+
+  <div class="drops">
+    <div class="drop drop-1"></div>
+    <div class="drop drop-2"></div>
+    <div class="drop drop-3"></div>
+    <div class="drop drop-4"></div>
+    <div class="drop drop-5"></div>
+  </div>
+</div>
+    </div>
+</div>
 {% endblock %}
-
-<!--<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>-->
-
-<!-- font-family: 'Aclonica';font-size: 22px;-->
