--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -23,12 +23,15 @@
                     <div class="col-lg-12">
 
                         <div class="navbar-header">
+
                             <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse"><span
                                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                             </button>
-                            <a href="{{ url_for('main.index') }}" class="navbar-brand">TakeIt</a>
+                                <a href="{{ url_for('main.index') }}" class="navbar-brand">
+                                    <img src="https://i.ibb.co/8M29bd5/Removal-963.png"
+                                         alt="Logo" width="120%" height="240%" style="margin-top: -25%;">
+                                </a>
                         </div>
-
                         <div class="navbar-collapse collapse" id="mobile_menu">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="{{ url_for('main.index') }}">Home</a></li>
@@ -58,7 +61,7 @@
 
                             <ul class="nav navbar-nav navbar-right">
                                 {% if current_user.is_authenticated %}
-                                <li><a href="{{ url_for('main.profile') }}"><span
+                                <li><a href="{{ url_for('main.test_page') }}"><span
                                         class="glyphicon glyphicon-user"></span> Profile</a></li>
                                 {% endif %}
                                 {% if not current_user.is_authenticated %}
