--- a/project/templates/gmah_signup.html
+++ b/project/templates/gmah_signup.html
@@ -6,45 +6,52 @@
     <form method="POST" action="/gmah_signup" class="centerform" >
         <div id="hidden_div">
             <br>
-            <h1 class="textcenter">רישום גמ״ח חדש</h1>
-            <p class="textcenter"> שדות חובה *</p>
+            <h1 class="textcenter">Sign Up as Gmah</h1>
+            <p class="textcenter">Mandatory Fields *</p>
             <hr>
 
-            <label name="id" for="id"><br>תעודת זהות <p class="hova">*</p></b></label>
+        <label name="id" for="id"><br> <p class="hova"> *</p> id</b></label>
             <input type="text" placeholder="1234556789" name="id" required
                       oninvalid="this.setCustomValidity('Enter Your ID Here')"
                     oninput="this.setCustomValidity('')" >
 
-            <label for="email"><b>כתובת אימייל <p class="hova">*</p></b></label>
+    <label for="email"><b> <p class="hova">*</p> Email Address </b></label>
             <input type="email" placeholder="name@domain.co" name="email"
                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required>
 
-            <label for="password"><b> <p class="hova">*</p>סיסמא</b></label>
-            <input type="password" placeholder="*********" name="password" required>
-
-            <label for="name"><b>שם הגמ״ח <p class="hova">*</p></b></label>
+            <label for="name"><b><p class="hova">*</p> Gmah Name <p class="hova">*</p></b></label>
             <input type="text" placeholder="שם הגמ״ח" name="name" required>
 
-            <label for="owner_first_name"><b>שם פרטי <p class="hova">*</p></b></label>
+      <label for="firstname"><b><p class="hova">*</p> First Name</b></label>
             <input type="text" placeholder="מרדכי" name="owner_first_name" required>
 
-            <label for="owner_last_name"><b>שם משפחה <p class="hova">*</p></b></label>
+      <label for="lastname"><b><p class="hova">*</p> Last Name</p></b></label>
             <input type="text" placeholder="לוי" name="owner_last_name" required>
 
-            <label for="phone"><b>מספר טלפון <p class="hova">*</p></b></label>
+      <label for="phone"><b>Phone Number</b></label>
             <input type="text" placeholder="05x-xxxxxxx" name="phone" pattern="[0][0-9]{2}-[0-9]{7}" required>
 
-            <label for="city"><b>עיר <p class="hova">*</p></b></label>
+      <label for="city"> <p class="hova">*</p> <b> City </b></label>
             <input type="text" placeholder="נתניה" name="city" required>
 
-            <label for="street"><b>רחוב <p class="hova">*</p></b></label>
+      <label for="street"><b> <p class="hova">*</p> Street </b></label>
             <input type="text" placeholder="רוטשילד" name="street" required>
 
-            <label for="street_number"><b>מספר בית</b></label>
+      <label for="streetnum"><b>Street Number </b></label>
             <input type="number" name="street_number" required>
 
-            <label for="category"><b>קטגוריה</b></label>
+            <label for="category"><b>Category</b></label>
             <input type="text" name="ביגוד" required>
+
+    <label for="password"><b> <p class="hova">*</p> Password </b></label>
+            <input type="password" placeholder="********" name="password">
+<!--    required oninvalid="this.setCustomValidity('Enter Your Password Here')" oninput="this.setCustomValidity('')" >-->
+
+    <label for="password-repeat"><b> <p class="hova">*</p> Repeat Password</b></label>
+            <input type="password" placeholder="********" name="password-repeat" style="height:50px;">
+<!--    required-->
+<!--                      oninvalid="this.setCustomValidity('Enter Your Password Here')"-->
+<!--    oninput="this.setCustomValidity('')" >-->
 
             <label for="profilepicture"><b>תמונת <פרופיל></פרופיל></b></label>
             <input type="file" id="myFile" name="profilepicture">
