--- a/project/templates/test_page.html
+++ b/project/templates/test_page.html
@@ -3,18 +3,15 @@
 {% block content %}
     {% for item in items %}
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
+            {% set imagename = item.email %}
             <h5 class="card-title">{{ item.email }}</h5>
             <p class="card-text">{{ item.name }}</p>
-            <a class="btn btn-primary" href={{ url_for('main.user_profile', email=item.email)}}>Go somewhere</a>
+            <img src={{url_for('static',filename='images/{}.jpeg'.format(imagename))}} width="200px" height="100px">
+
+            <a class="btn btn-primary" href={{url_for('main.user_profile', email=item.email)}}>Go somewhere</a>
         </div>
     </div>
     {% endfor %}
-
-
-
-
-
 
 {% endblock %}
