--- a/project/static/style.css
+++ b/project/static/style.css
@@ -26,9 +26,24 @@
 
 body{
     margin-top:5%;
+    overflow-y: scroll;
+    height: 100%;
+    overflow-x: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .centertext{
 text-align:center;
+}
+/*custome search*/
+.customesearch{
+    width:50%;
+    margin:auto;
+}
+.headersearch{
+    font-family: 'Optima';
+    font-size:24px;
+    text-align:center;
+    margin:2%;
 }
 
 /*navbar */
@@ -44,6 +59,45 @@ text-align:center;
 .loginlabel{
     padding:0px;
     margin:0px;
+}
+
+/*profile*/
+.profileline{
+    border-style: dotted;
+    float:left;
+    height:100%;
+    margin:1% 0 0 10%;
+
+}
+
+.profilephoto{
+    float:left;
+    margin:1% 0 0 10%;}
+
+
+/*product*/
+.eachproduct{
+    border-style: dotted;
+    width:70%;
+    height:100%;
+    margin:auto;
+    margin-bottom:2%;
+}
+.resultProductPhoto{
+    float:left;
+    margin:2% 5% 0 5%;
+
+}
+.productphoto{
+    float:left;
+    margin:10% 0 0 25%;
+    border-style: dotted;
+}
+.productdesc{
+    float:right;
+    margin:10% 15% 0 0;
+    font-family: 'Optima';
+    font-size:24px;
 }
 
 /* index */
@@ -116,16 +170,15 @@ text-align:center;
     display:inline;
 }
 /*sign up*/
-
-
 .split {
-  height: 100%;
   width: 50%;
-  position: fixed;
-  z-index: 1;
   top: 4%;
-  overflow-x: hidden;
   padding-top: 20px;
+  height: 100%;
+  z-index: 1;
+  overflow-x: hidden;
+  position: fixed;
+
 }
 
 .left {
@@ -159,11 +212,6 @@ display:inline;
     width:40%;
     background-color:red;
     margin:auto;}
-
-body {
-font-family: Arial, Helvetica, sans-serif;
-}
-
 .textcenter{
     text-align:center;
     font-family: 'Optima';
@@ -374,4 +422,111 @@ input::placeholder {
   top: 0;
   width: 100%;
   z-index: -1;
+}
+
+
+
+
+/*FOOTER*/
+
+/* STYLES SPECIFIC TO FOOTER  */
+.footer {
+  width: 100%;
+   position: fixed;
+  background-color: #070617;
+   bottom: -10px;
+
+}
+.footer .col {
+  width: 190px;
+  height: auto;
+  float: left;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 0px 20px 20px 20px;
+}
+.footer .col h1 {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 17px;
+  padding: 20px 0px 5px 0px;
+  color: rgba(255,255,255,0.2);
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.250em;
+}
+.footer .col ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer .col ul li {
+  color: #999999;
+  font-size: 14px;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 5px 0px 5px 0px;
+  cursor: pointer;
+  transition: .2s;
+  -webkit-transition: .2s;
+  -moz-transition: .2s;
+}
+.social ul li {
+  display: inline-block;
+  padding-right: 5px !important;
+}
+
+.footer .col ul li:hover {
+  color: #ffffff;
+  transition: .1s;
+  -webkit-transition: .1s;
+  -moz-transition: .1s;
+}
+.clearfix {
+  clear: both;
+}
+@media only screen and (min-width: 1280px) {
+  .contain {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 1139px) {
+  .contain .social {
+    width: 1000px;
+    display: block;
+  }
+  .social h1 {
+    margin: 0px;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .footer .col {
+    width: 33%;
+  }
+  .footer .col h1 {
+    font-size: 14px;
+  }
+  .footer .col ul li {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 500px) {
+    .footer .col {
+      width: 50%;
+    }
+    .footer .col h1 {
+      font-size: 14px;
+    }
+    .footer .col ul li {
+      font-size: 13px;
+    }
+}
+@media only screen and (max-width: 340px) {
+  .footer .col {
+    width: 100%;
+  }
 }
