--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <div class="split homeleft">
     {% if current_user.is_authenticated %}
-        <img src="https://i.ibb.co/NKDN475/Whats-App-Image-2022-08-13-at-10-26-11-AM-removebg-preview.png"
-        alt="Logo" width="10%" height="10%">
-
-        <h1 class="homewelcome">
+    <h1 class="homewelcome">
             Welcome back {{ current_user.name }}!
         </h1>
     {% endif %}
@@ -16,7 +14,7 @@
                                              alt="Logo" width="10%" height="10%">
          <h1 class="homewelcome">
                 Welcome To TakeIt
-            </h1>
+         </h1>
         {% endif %}
         <h2 class="homedesc">
             The first "give-away" platform.
@@ -26,23 +24,25 @@
         </p>
         <div class="floatleft" >
               <button class="homepushable ">
-                  <span class="homefront raise shadowed">
-                      Donate Money
-                  </span>
+                  <a href="/donate_money" class="homefront raise shadowed" style="text-decoration:none">
+                    Donate Money
+                  </a>
                </button>
               <button class="homepushable ">
-                  <span class="homefront raise shadowed">
-                      Donate Items
-                  </span>
+                  <a href="/donate_money" class="homefront raise shadowed" style="text-decoration:none">
+                    Donate item
+                  </a>
               </button>
         </div>
     </div>
     <div class="split homeright">
-    <iframe class="mapcentered"
+  <iframe class="mapcentered"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3385.87622010806!2d34.82510661523966!3d31.937117781233866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b5d7c494c445%3A0x659f08e24eda14fd!2sBe&#39;er%20Ya&#39;akov!5e0!3m2!1sen!2sil!4v1657985427988!5m2!1sen!2sil"
             width="690" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+</div>
+
+</div>
 
 {% endblock %}
 
