--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -42,14 +42,17 @@
                                         <li><a href="#">Donate Items</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Custom Search</a></li>
+                                <li><a href="/search">Custom Search</a></li>
+                                {% if current_user.owner_first_name %}
+                                <li><a href="/my_products">My Products</a></li>
+                                {% endif %}
                             </ul>
                             <ul class="nav navbar-nav">
                                 <li>
-                                    <form action="" class="navbar-form">
+                                    <form method="POST" action="/search" class="navbar-form">
                                         <div class="form-group">
                                             <div class="input-group">
-                                                <input type="search" name="search" id=""
+                                                <input type="search" name="search" id="search"
                                                        placeholder="Search Anything Here..." class="form-control">
                                                 <span class="input-group-addon"><span
                                                         class="glyphicon glyphicon-search"></span></span>
@@ -61,8 +64,11 @@
 
                             <ul class="nav navbar-nav navbar-right">
                                 {% if current_user.is_authenticated %}
-                                <li><a href="{{ url_for('main.test_page') }}"><span
-                                        class="glyphicon glyphicon-user"></span> Profile</a></li>
+                                <li><a href="{{ url_for('main.profile') }}">
+                                    <span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                                <li><a href="{{ url_for('auth.logout') }}">
+                                    <span class="glyphicon glyphicon-user"></span> Logout</a></li>
+
                                 {% endif %}
                                 {% if not current_user.is_authenticated %}
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
@@ -73,11 +79,6 @@
                                         <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
                                     </ul>
                                 </li>
-                                {% endif %}
-                                {% if current_user.is_authenticated %}
-                                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                                    Logout
-                                </a>
                                 {% endif %}
                             </ul>
                         </div>
