--- a/project/templates/user_signup.html
+++ b/project/templates/user_signup.html
@@ -4,18 +4,18 @@
 {% block content %}
 <div class="column is-4 is-offset-4">
     <div class="box">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="notification is-danger">
-                {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
-            </div>
-        {% endif %}
-        {% endwith %}
-      <form name="myForm" action="/signup" method="post" class="centerform">
+      <form name="myForm" action="/signup" method="post" class="centerform" enctype="multipart/form-data">
 <div id="hidden_div">
     <br>
     <h1 class="textcenter">Sign Up as User</h1>
     <p class="textcenter"> Mandatory Fields *</p>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="notification is-danger " style="color:red; font-size:120%; margin:5% 0 5% 37%;">
+                {{ messages[0] }}
+            </div>
+        {% endif %}
+        {% endwith %}
     <hr>
         <label name="id" for="id"><br> <p class="hova"> *</p> id</b></label>
     <input type="text" placeholder="1234556789" name="id" required
@@ -23,22 +23,22 @@
     oninput="this.setCustomValidity('')" >
 
       <label for="firstname"><b><p class="hova">*</p> First Name</b></label>
-    <input type="text" placeholder="Avi" name="firstname" >
-<!--           required-->
-<!--           oninvalid="this.setCustomValidity('Enter User First Name Here')"-->
-<!--    oninput="this.setCustomValidity('')" >-->
+    <input type="text" placeholder="Avi" name="firstname"
+           required
+           oninvalid="this.setCustomValidity('Enter User First Name Here')"
+    oninput="this.setCustomValidity('')" >
 
       <label for="lastname"><b><p class="hova">*</p> Last Name</p></b></label>
-    <input type="text" placeholder="כהן" name="lastname" >
-<!--           required-->
-<!--           oninvalid="this.setCustomValidity('Enter User Last Name Here')"-->
-<!--    oninput="this.setCustomValidity('')" >-->
+    <input type="text" placeholder="כהן" name="lastname"
+           required
+           oninvalid="this.setCustomValidity('Enter User Last Name Here')"
+    oninput="this.setCustomValidity('')" >
 
       <label for="phone"><b>Phone Number</b></label>
-    <input type="text" placeholder="05x-xxxxxxx" name="phone" pattern="[0][0-9]{2}-[0-9]{7}">
-<!--           required-->
-<!--               oninvalid="this.setCustomValidity('Enter User Phone number This Format: 055-1234567')"-->
-<!--    oninput="this.setCustomValidity('')" >-->
+    <input type="text" placeholder="05x-xxxxxxx" name="phone" pattern="[0][0-9]{2}-[0-9]{7}"
+           required
+               oninvalid="this.setCustomValidity('Enter User Phone number This Format: 055-1234567')"
+    oninput="this.setCustomValidity('')" >
 
       <label for="city"> <p class="hova">*</p> <b> City </b></label>
     <input type="text" placeholder="אשדוד" name="city" >
@@ -56,24 +56,24 @@
     <input id="streetnum" type="12" name="streetnum" value="0">
 
     <label for="email"><b> <p class="hova">*</p> Email Address </b></label>
-    <input type="email" placeholder="name@domain.co" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$">
-<!--    required-->
-<!--                      oninvalid="this.setCustomValidity('Enter User Email Here')"-->
-<!--    oninput="this.setCustomValidity('')" >-->
-<!--    &lt;!&ndash;    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"&ndash;&gt;-->
+    <input type="email" placeholder="name@domain.co" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"
+    required
+                      oninvalid="this.setCustomValidity('Enter User Email Here')"
+    oninput="this.setCustomValidity('')" >
+    <!--    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"-->
 
     <label for="password"><b> <p class="hova">*</p> Password </b></label>
-    <input type="password" placeholder="********" name="password">
-<!--    required oninvalid="this.setCustomValidity('Enter Your Password Here')" oninput="this.setCustomValidity('')" >-->
+    <input type="password" placeholder="********" name="password"
+    required oninvalid="this.setCustomValidity('Enter Your Password Here')" oninput="this.setCustomValidity('')" >
 
     <label for="password-repeat"><b> <p class="hova">*</p> Repeat Password</b></label>
-    <input type="password" placeholder="********" name="password-repeat" >
-<!--    required-->
-<!--                      oninvalid="this.setCustomValidity('Enter Your Password Here')"-->
-<!--    oninput="this.setCustomValidity('')" >-->
+    <input type="password-repeat" placeholder="********" name="password-repeat"
+    required
+                      oninvalid="this.setCustomValidity('Enter Your Password Here')"
+    oninput="this.setCustomValidity('')" >
 
-       <label  for="profilepicture"><b>Profile Picture</b></label>
-      <input type="file" id="myFile" name="profilepicture" style="height:50px;">
+            <label for="profile"><b>Profile Picture</label>
+            <input type="file" id="file" name="file">
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
       <button type="submit" class="signupbtn" >Sign Up</button>
